# JUCEPipelineProcessor

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: deployment-linux.yml  deployment-osx.yml  deployment-win.yml
src/: Application.cpp
src/Editor/: SidechainMixerAudioProcessorEditor.cpp  SidechainMixerAudioProcessorEditor.hpp
src/Processor/: Constants.hpp  SidechainMixerAudioProcessor.cpp  SidechainMixerAudioProcessor.hpp
src/Processor/AudioProcessorExtensions/: DAWMessageInterface.hpp  DataInterface.hpp  Processor.hpp  ProgramInterface.hpp  StateInformationInterface.hpp
src/Processor/DSP/: Connect.hpp  Connectable.hpp  ConnectablePipeline.hpp  Invert.hpp  Mix.hpp  PassBlock.hpp  ProcessBlockInput.hpp  ProcessBlockOutput.hpp  Processable.hpp  ProcessableHelper.hpp  ProcessablePileline.hpp  Utility.hpp
src/Processor/DSP/Concepts/: BaseBus.hpp  Bus.hpp  Connectable.hpp  Processable.hpp  ReadableBus.hpp  Utility.hpp  WritableBus.hpp
src/Processor/Models/: AudioProcessorModel.hpp  BufferModel.hpp
